tests/typechecking/valid/let6.ml
let x=5+5 in
let x=2 in
let e= x+5 in ()
