tests/typechecking/invalid/let3.ml
let x=5+5 in
let y=2+x+y in
let e =x+y+5 in()


